[Fixes #4] prevent flickering when reloading

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  background-color: #000;
 
   color: #fff;
 
